refactoring java level 8